Fix menu overlap that renders links behind it un-clickable

--- a/_sass/_dl-menu.scss
+++ b/_sass/_dl-menu.scss
@@ -3,9 +3,7 @@
     ========================================================================== */
 
 .dl-menuwrapper {
-	width: 100%;
-	height: 100%;
-	position: fixed;
+	position: absolute;
 	top: 0;
 	left: 0;
 	z-index: 1000;
@@ -20,6 +18,11 @@
 		max-width: 175px;
 		top: 25px;
 		left: 25px;
+	}
+
+	&.dl-menuopen {
+		width: 100%;
+		height: 100%;
 	}
 
 	button {
